--- a/src/skills.html
+++ b/src/skills.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/styles.5c8f3eab.css">
+    <link rel="stylesheet" href="scss/styles.scss">
 </head>
 <body>
     
@@ -30,18 +30,18 @@
     </section>
 <br>
     <div class="navbar">
-        <a href="github"><img src="/github_logo.cde71cbd.png" alt=""></a>
-        <a href="linkedIn"><img src="/linkedin_logo.a3662d67.png" alt=""></a>
-        <a href="codepen"><img src="/codepen_logo.cc525a84.png" alt=""></a>
+        <a href= "github"><img src="/images/github_logo.png" alt=""></a>
+        <a href="linkedIn"><img src="/images/linkedin_logo.png" alt=""></a>
+        <a href="codepen"><img src="/images/codepen_logo.png" alt=""></a>
         <br>
         <div class="dropdown">
           <button class="dropbtn">Learn more about me
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/home.html">Home</a>
-            <a href="/skills.html">Skills</a>
-            <a href="/aboutme.html">About Me</a>
+            <a href="home.html">Home</a>
+            <a href="skills.html">Skills</a>
+            <a href="aboutme.html">About Me</a>
           </div>
         </div>
       </div> 
